--- a/index.html
+++ b/index.html
@@ -4,26 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos1.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="estilo_payaso.css">
+    <title>Practica_Payaso</title>
 </head>
 <body>
-    <div id="principal">
-        <div id="c1">
+    <div id="sombrero">
+        <div id="sombrero_1">
 
         </div>
-        <div id="c2">
-
-        </div>
-        <div id="c3">
-            <div id="c3_1">
+    </div>
+    <div id="rostro">
+        <div id="ojo1">
+            <div id="pupila1">
 
             </div>
         </div>
-        <p>Copyright (C) 2009 Microsoft Corporation. Reservados todos los derechos.</p> 
+        <div id="ojo2">
+            <div id="pupila2">
+
+            </div>
+        </div>
+        <div id="nariz">
+
+        </div>
+        <div id="barba">
+            <div id="barba1">
+                <div id="boca">
+
+                </div>
+            </div>
+        </div>
+        
+        
     </div>
-    <p>Copyright (C) 2009 Microsoft Corporation. Reservados todos los derechos.</p>     
-    <p>Copyright (C) 2009 Microsoft Corporation. Reservados todos los derechos.</p> 
-    <p>Copyright (C) 2009 Microsoft Corporation. Reservados todos los derechos.</p> 
 </body>
 </html>
